--- a/css/styles.css
+++ b/css/styles.css
@@ -2517,7 +2517,7 @@ textarea.form-control-lg {
 }
 .form-check-input[type=checkbox]:indeterminate {
   background-color: #6eb748;
-  border-color: #f4623a;
+  border-color: #84f43a;
   background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 20 20'%3e%3cpath fill='none' stroke='%23fff' stroke-linecap='round' stroke-linejoin='round' stroke-width='3' d='M6 10h8'/%3e%3c/svg%3e");
 }
 .form-check-input:disabled {
@@ -2609,7 +2609,7 @@ textarea.form-control-lg {
   }
 }
 .form-range::-webkit-slider-thumb:active {
-  background-color: #fcd0c4;
+  background-color: #e8fcc4;
 }
 .form-range::-webkit-slider-runnable-track {
   width: 100%;
@@ -2638,7 +2638,7 @@ textarea.form-control-lg {
   }
 }
 .form-range::-moz-range-thumb:active {
-  background-color: #fcd0c4;
+  background-color: #e8fcc4;
 }
 .form-range::-moz-range-track {
   width: 100%;
@@ -4936,7 +4936,7 @@ textarea.form-control-lg {
 .alert-primary {
   color: #923b23;
   background-color: #fde0d8;
-  border-color: #fcd0c4;
+  border-color: #e8fcc4;
 }
 .alert-primary .alert-link {
   color: #752f1c;
